--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div
         class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center"
       >
-        <h1 class="text-2xl font-bold text-blue-600">MyCompany</h1>
+        <h1 class="text-2xl font-bold text-blue-600">Tehzeeb</h1>
 
         <ul class="hidden md:flex space-x-6">
           <li><a href="#" class="hover:text-blue-600">Home</a></li>
@@ -124,3 +124,4 @@
     </footer>
   </body>
 </html>
+
